--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,10 @@
 {
+  "ConnectionStrings": {
+    "PersonBase": "Server=127.0.0.1;Database=baseperson;Port=5432;User Id=postgres;Password=12345678;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
